# income-calculator

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
