[package]
  authors = [
    "Prince Muel <vansomecsam@gmail.com>",
  ]
  build = "build.rs"
  description = "A desktop app that helps calculate income"
  edition = "2021"
  name = "income-calculator"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  slint = "1.6"

[build-dependencies]
  slint-build = "1.6"

[package.metadata.bundle]
  identifier = "io.github.princemuel"
  name       = "Income Divider"
